--- a/Madden/Content/Site.css
+++ b/Madden/Content/Site.css
@@ -67,3 +67,36 @@ tr.playerRow > td {
     padding-bottom: 0px;
     padding-top: 0px;
 }
+
+.teamsDiv {
+    /*display: flex;
+    flex-direction: column;
+    flex-grow: 0;*/
+    min-width: 400px;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: left;
+    min-width: 210px;
+    /*height: 300px;*/
+    background-color: lightgrey;
+}
+
+.flex-item {
+    background-color: seashell;
+    width: 210px;
+    height: 150px;
+    margin: 5px;
+}
+
+.heading {
+    background-color: deepskyblue;
+}
+
+.standingsCell {
+    width: 100px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
